--- a/templates/craft_sicherungWebsite/templates/index.html
+++ b/templates/craft_sicherungWebsite/templates/index.html
@@ -3,12 +3,12 @@
 
 {% block block1 %}
 
-<div class="container-fluid text-center" id="ersterContainer" style="padding-top: 120px; position: relative;">
+<div class="container-fluid text-center no-padding" id="ersterContainer" style="padding-top: 120px; position: relative;">
 
 
-  <img class="img-fluid" id="welle" src="{{ craft.assets.filename('welle.png').one().getUrl() }}" style="position: absolute; left:0; width: 40%;  z-index: -999;">
+  <img class="img-fluid" id="welle" src="{{ craft.assets.filename('welle.png').one().getUrl() }}" style="position: absolute; width: 40%; left: 0px;">
 
-  <div class="container achterspaltenlayout" style="padding-top:0px;">
+  <div class="container achterspaltenlayout" style="padding-top:0px; position: relative;">
     {% set entry = craft.entries.section('home').slug('mensch-schoepfung').one() %}
 
     <div style="padding-bottom:50px; ">
