--- a/templates/craft_sicherungWebsite/templates/ueberUns/arbeitsweise.html
+++ b/templates/craft_sicherungWebsite/templates/ueberUns/arbeitsweise.html
@@ -5,11 +5,11 @@
 
 {% block block1 %}
 
-<div class="container-fluid text-center" style="padding-top: 150px; position: relative;">
+<div class="container-fluid text-center no-padding" style="padding-top: 150px; position: relative;">
 
-<img class="img-fluid" id="welle" src="{{ craft.assets.filename('welle.png').one().getUrl() }}" style="position: absolute; left:0; width: 40%;  z-index: -999;">
+  <img class="img-fluid" id="welle" src="{{ craft.assets.filename('welle.png').one().getUrl() }}" style="position: absolute; width: 40%; left: 0px;">
 
-<div class="container Achter-Spaltenlayout">
+<div class="container achterspaltenlayout" style="position: relative;">
   <div style="padding-bottom:80px; ">
     <h1 style="padding-bottom: 30px;"> Unsere Zielsetzung: Ganzheitliche, nachhaltige
       und von den Menschen selbst bestimmte Entwicklung  </h1>
