--- a/templates/craft_sicherungWebsite/templates/ueberUns/verein.html
+++ b/templates/craft_sicherungWebsite/templates/ueberUns/verein.html
@@ -7,9 +7,9 @@
 
 <div class="container-fluid text-center" style="padding-top: 150px; position: relative;">
 
-  <img class="img-fluid" id="welle" src="{{ craft.assets.filename('welle.png').one().getUrl() }}" style="position: absolute; left:0; width: 40%;  z-index: -999;">
+  <img class="img-fluid" id="welle" src="{{ craft.assets.filename('welle.png').one().getUrl() }}" style="position: absolute; width: 40%; left: 0px;">
 
-  <div class="container achterspaltenlayout" style="padding-top: 0px;">
+<div class="container achterspaltenlayout" style="position: relative;">
     {% set entry = craft.entries.section('ueberUns').slug('der-verein').one() %}
     <h1 style="padding-bottom: 30px;"> {{ entry.zusatzfeld1 }}  </h1>
     <div id="anleser">  {{ entry.langerText }} </div>
