--- a/templates/craft_sicherungWebsite/web/CSSundJS/navbarCSS.css
+++ b/templates/craft_sicherungWebsite/web/CSSundJS/navbarCSS.css
@@ -1,77 +1,63 @@
-
-
-/* Der graue Balken für die Navbar wird damit gestylt */
-.rectangle {
+.navbarCSSNeu {
+  /* Der graue Balken für die Navbar wird damit gestylt */
+  /*Das geforderte Padding der dropdown-Navbar, also nicht der immer sichtbaren Leiste.*/
+  /* Der Abstand zwischen den einzelnen Links wird verkleinert von der Hauptleiste */
+  /* Alle dropdownMenus, die ein nav-item als Vater haben, sollen beim hovern schon angezeigt werden */
+  /* Alle dropdown-menüs auswählen, die ein submenu als Vater haben
+ (Im Code wird ein Untermenu zuvor mit einem Submenu bekanntgemacht)
+ Also alles Untermenus werden ausgewählt. Dann werden sie so verschoben,
+ dass sie rechts von dem Vatermenü sind */
+  /* Block-Boxen nehmen die gesamte Breite des Elternelementes ein */
+}
+.navbarCSSNeu .rectangle {
   height: 70px;
   background-color: #f8f5f2;
   padding-top: 0px;
   margin-top: -30px;
-  }
-
-
-  #collapsibleNavbar {
-    margin-top: -40px;
-  }
-
-/*Das geforderte Padding der dropdown-Navbar, also nicht der immer sichtbaren Leiste.*/
-.dropdown-menu {
+}
+.navbarCSSNeu #collapsibleNavbar {
+  margin-top: -40px;
+}
+.navbarCSSNeu .dropdown-menu {
   padding-top: 40px;
   padding-bottom: 20px;
   border-radius: 0 0 0 0;
   border: none;
 }
-
-.dropdown-item a {
+.navbarCSSNeu .dropdown-item a {
   color: #333333;
 }
-
-.dropdown-item:hover {
+.navbarCSSNeu .dropdown-item:hover {
   background-color: #e3d7cb;
   color: #0062ae;
 }
-
-/* Der Abstand zwischen den einzelnen Links wird verkleinert von der Hauptleiste */
-  .dropdown-menu>li {
-    margin-top: 0px;
-    margin-bottom: 0px;
-
+.navbarCSSNeu .dropdown-menu > li {
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+.navbarCSSNeu .nav-item:hover > .dropdown-menu {
+  display: inital;
+  left: inital;
+  transform: translateX(0%);
+  margin-top: 0px;
+}
+.navbarCSSNeu .dropdown-submenu > .dropdown-menu {
+  top: 0;
+  left: 100%;
+  height: 100%;
+  margin-left: -1px;
+  margin-top: -1px;
+  border-radius: 0 0 0 0;
+  background-color: #e3d7cb;
+}
+.navbarCSSNeu .dropdown-submenu:hover > .dropdown-menu {
+  display: block;
+}
+@media all and (min-width: 993px) {
+  .navbarCSSNeu .nav-item:hover > .dropdown-menu {
+    display: block;
+    margin-top: -5px;
+    left: 50%;
+    transform: translateX(-50%);
   }
-
-/* Alle dropdownMenus, die ein nav-item als Vater haben, sollen beim hovern schon angezeigt werden */
-.nav-item:hover>.dropdown-menu {
-
-
-    display: inital;
-    left: inital;
-    transform: translateX(0%);
-    margin-top: 0px;
-    }
-
-
-/* Alle dropdown-menüs auswählen, die ein submenu als Vater haben
- (Im Code wird ein Untermenu zuvor mit einem Submenu bekanntgemacht)
- Also alles Untermenus werden ausgewählt. Dann werden sie so verschoben,
- dass sie rechts von dem Vatermenü sind */
-  .dropdown-submenu>.dropdown-menu {
-      top: 0;
-      left: 100%;
-      height: 100%;
-      margin-left: -1px;
-      margin-top: -1px;
-      border-radius: 0 0 0 0;
-      background-color: #e3d7cb;
-  }
-
-/* Block-Boxen nehmen die gesamte Breite des Elternelementes ein */
-  .dropdown-submenu:hover>.dropdown-menu {
-      display: block;
-  }
-
-  @media all and (min-width: 993px)  {
-    .nav-item:hover>.dropdown-menu {
-      display: block;
-      margin-top: -5px;
-      left: 50%;
-      transform: translateX(-50%);
-        }
-    }
+}
