--- a/templates/craft_sicherungWebsite/templates/_layouts/navbar.html
+++ b/templates/craft_sicherungWebsite/templates/_layouts/navbar.html
@@ -98,7 +98,7 @@
 
             <ul class="dropdown-menu multi-level" role="menu" aria-labelledby="dropdownMenu">
               <li class="dropdown-submenu">
-                <a  class="dropdown-item" tabindex="-1" href="https://aufbau-Website.de/craft/web/spenden/einmalig.html">Allgemein Spenden</a>
+                <a  class="dropdown-item" tabindex="-1" href="https://aufbau-Website.de/craft/web/spenden/allgemein.html">Allgemein Spenden</a>
                 <ul class="dropdown-menu">
                   <li class="dropdown-item"><a tabindex="-1" href="https://aufbau-Website.de/craft/web/spenden/allgemein/einmaligallgemein.html">Einmalig</a></li>
                   <li class="dropdown-divider"></li>
@@ -107,7 +107,7 @@
               </li>
 
               <li class="dropdown-submenu" style="height: 100px;">
-               <a  class="dropdown-item" tabindex="-1" href="https://aufbau-Website.de/craft/web/spenden/projektbezogen/partnerlandeinmal">Projektbezogen Spenden</a>
+               <a  class="dropdown-item" tabindex="-1" href="https://aufbau-Website.de/craft/web/spenden/projektbezogen.html">Projektbezogen Spenden</a>
                <ul class="dropdown-menu">
                  <li class="dropdown-submenu">
                    <a class="dropdown-item" href="https://aufbau-Website.de/craft/web/spenden/projektbezogen/partnerlandeinmal">Einmalig</a>
