--- a/templates/craft_sicherungWebsite/templates/spenden/projektbezogen.html
+++ b/templates/craft_sicherungWebsite/templates/spenden/projektbezogen.html
@@ -6,10 +6,10 @@
 <div class="container-fluid text-center" id="ersterContainer" style="padding-top: 120px; position: relative;">
 
 
-  <img class="img-fluid" src="{{ craft.assets.filename('welle.png').one().getUrl() }}" style="position: absolute; left:0; width: 40%;  z-index: -999;">
+  <img class="img-fluid" src="{{ craft.assets.filename('welle.png').one().getUrl() }}" style="position: absolute; left:0; width: 40%;">
 
 
-  <div class="container achterspaltenlayout" style="padding-top:0px;">
+  <div class="container achterspaltenlayout" style="padding-top:0px; position: relative;">
     {% set entry = craft.entries.section('spenden').slug('menschen-chance2').one() %}
 
     <div style="padding-bottom:50px; ">
@@ -22,13 +22,13 @@
 
 <div class="container-fluid no-padding" style="background-color: #ed6e2c; padding-bottom: 30px;">
   <div class="container zwoelferspaltenlayout text-center" style="background-color: #ffffff; padding-bottom: 3rem;">
-    <div id="anleser"> Sie wollen einmalig spenden? Vielen Dank!  </div>
+    <div id="anleser"> Sie wollen Projektbezogen Spenden? Vielen Dank!  </div>
     <div class="row">
       <div class="col-sm-6">
-        <a href="https://aufbau-Website.de/craft/web/spenden/allgemein/einmaligallgemein" class="btn btn-primary" role="button">Einmalig allgemein</a>
+        <a href="https://aufbau-website.de/craft/web/spenden/projektbezogen/partnerlandeinmal" class="btn btn-primary" role="button">Einmalig Projektbezogen Spenden</a>
       </div>
       <div class="col-sm-6">
-        <a href="https://aufbau-Website.de/craft/web/spenden/allgemein/regelmaesigallgemein" class="btn btn-primary" role="button">Regelmäßig allgemein</a>
+        <a href="https://aufbau-website.de/craft/web/spenden/projektbezogen/partnerlandregelmaesig" class="btn btn-primary" role="button">Regelmäßig Projektbezogen Spenden</a>
       </div>
     </div>
 
