--- a/templates/craft_sicherungWebsite/templates/_layouts/navbar_spende.html
+++ b/templates/craft_sicherungWebsite/templates/_layouts/navbar_spende.html
@@ -98,13 +98,6 @@
 
               <li class="dropdown-submenu">
                 <a  class="dropdown-item" tabindex="-1" href="https://aufbau-Website.de/craft/web/projekte/projektberichte.html">Projektberichte</a>
-                <ul class="dropdown-menu">
-                  <li class="dropdown-item"><a tabindex="-1" href="#">1. Bericht</a></li>
-                  <li class="dropdown-divider"></li>
-                  <li class="dropdown-item"><a href="#">2. Bericht</a></li>
-                  <li class="dropdown-divider"></li>
-                  <li class="dropdown-item"><a href="#">3. Bericht</a></li>
-                </ul>
               </li>
             </li>
           </ul>
@@ -118,34 +111,34 @@
 
             <ul class="dropdown-menu multi-level" role="menu" aria-labelledby="dropdownMenu">
               <li class="dropdown-submenu">
-                <a  class="dropdown-item" tabindex="-1" href="https://aufbau-Website.de/craft/web/spenden">Allgemein Spenden</a>
+                <a  class="dropdown-item" tabindex="-1" href="https://aufbau-Website.de/craft/web/spenden/allgemein.html">Allgemein Spenden</a>
                 <ul class="dropdown-menu">
-                  <li class="dropdown-item"><a tabindex="-1" href="https://aufbau-Website.de/craft/web/spenden/einmaligallgemein.html">Einmalig</a></li>
+                  <li class="dropdown-item"><a tabindex="-1" href="https://aufbau-Website.de/craft/web/spenden/allgemein/einmaligallgemein.html">Einmalig</a></li>
                   <li class="dropdown-divider"></li>
-                  <li class="dropdown-item"><a href="https://aufbau-Website.de/craft/web/spenden/regelmaesigallgemein.html">Regelmäßig</a></li>
+                  <li class="dropdown-item"><a href="https://aufbau-Website.de/craft/web/spenden/allgemein/regelmaesigallgemein.html">Regelmäßig</a></li>
                 </ul>
               </li>
 
               <li class="dropdown-submenu" style="height: 100px;">
-               <a  class="dropdown-item" tabindex="-1" href="#">Programmbezogen Spenden</a>
+               <a  class="dropdown-item" tabindex="-1" href="https://aufbau-Website.de/craft/web/spenden/projektbezogen.html">Projektbezogen Spenden</a>
                <ul class="dropdown-menu">
                  <li class="dropdown-submenu">
-                   <a class="dropdown-item" href="#">Einmalig</a>
+                   <a class="dropdown-item" href="https://aufbau-Website.de/craft/web/spenden/projektbezogen/partnerlandeinmal">Einmalig</a>
                    <ul class="dropdown-menu">
                      <li class="dropdown-item"><a href="#">Länderpate</a></li>
                      <li class="dropdown-item"><a href="#">Dorfpate</a></li>
                      <li class="dropdown-item"><a href="#">Waldpate</a></li>
                    </ul>
-                   <a class="dropdown-item" href="#">Regelmäßig</a>
+                   <a class="dropdown-item" href="https://aufbau-Website.de/craft/web/spenden/projektbezogen/partnerlandregelmaesig">Regelmäßig</a>
                    <ul class="dropdown-menu">
-                     <li class="dropdown-item"><a href="#">Länderpate</a></li>
+                     <li class="dropdown-item"><a href="https://aufbau-Website.de/craft/web/spenden/projektbezogen/partnerlandregelmaesig">Länderpate</a></li>
                      <li class="dropdown-item"><a href="#">Dorfpate</a></li>
                      <li class="dropdown-item"><a href="#">Kinderpate plus</a></li>
                      <li class="dropdown-item"><a href="#">Waldpate</a></li>
                    </ul>
                  </li>
-                 <li class="dropdown-item"><a href="#">Schenken und Spenden</a></li>
-                 <li class="dropdown-item"><a href="#">Einkaufen und Spenden</a></li>
+                 <li class="dropdown-item"><a href="https://aufbau-Website.de/craft/web/spenden/projektbezogen/schenkenundspenden">Schenken und Spenden</a></li>
+                 <li class="dropdown-item"><a href="https://aufbau-Website.de/craft/web/spenden/projektbezogen/einkaufenundspenden">Einkaufen und Spenden</a></li>
                  <li class="dropdown-item"><a href="#">Lastschrifttermine</a></li>
 
                </ul>
