--- a/templates/craft_sicherungWebsite/templates/blog/index.html
+++ b/templates/craft_sicherungWebsite/templates/blog/index.html
@@ -1,69 +1,56 @@
 
 {% extends "_layouts/layoutHome.html" %}
 
-{% block headerbildPosition2 %}
-
-<div class="container-fluid text-center" style="padding-top: 150px; position: relative;">
-
-<img class="img-fluid" src="{{ craft.assets.filename('welle.png').one().getUrl() }}" style="position: absolute; left:0; width: 40%;  z-index: -999;">
-
-<div class="container Achter-Spaltenlayout">
-  <div id="text1" style="padding-bottom:80px; ">
-    <h1 style="padding-bottom: 30px;"> Für Mensch und Schöpfung  </h1>
-    <p> Chance e.V. ist eine christliche, soziale und ökologische Initiative für nachhaltige Entwicklung
-      im peruanischen Amazonasgebiet und bei den Maasai in Kenia.
-    </p>
-    </div>
-  </div>
-</div>
-
-
-      <div class="container-fluid no-padding">
-        <img class="img-fluid" src=" {{ craft.assets.filename('chance-home-header.jpg').one().getUrl() }} ">
-      </div>
-
-
-{% endblock %}
-
-
 {% block block1 %}
 
+<div class="container-fluid text-center" id="ersterContainer" style="padding-top: 120px; position: relative;">
 
-{# Alles, was bis zu dem endblock-Tag kommt, überschreibt den Block in layoutHome #}
 
-<div class="container Achter-Spaltenlayout">
+  <img class="img-fluid" src="{{ craft.assets.filename('welle.png').one().getUrl() }}" style="position: absolute; left:0; width: 40%;">
 
-    <p style="padding-bottom: 50px; padding-top: 50px;"> Wir geben Mensch und Schöpfung eine Chance, indem wir Kinder, Jugendliche
-und ganze Dorfgemeinschaften stark machen und dabei begleiten, ihre
-Lebensqualität selbstbestimmt zu verbessern.
-    </p>
-  </div>
 
-<div class="container Zwoelfer-Spaltenlayout">
-  <div class="card-deck">
-    <div class="card bg-primary">
-      <div class="card-body text-center">
-        <p class="card-text">Sie entkommen der Armut.</p>
-      </div>
-    </div>
-    <div class="card bg-warning">
-      <div class="card-body text-center">
-        <p class="card-text">Sie stärken ihre Selbstachtung.</p>
-      </div>
-    </div>
-    <div class="card bg-success">
-      <div class="card-body text-center">
-        <p class="card-text">Sie verbessern ihre Selbstbestimmung.
-</p>
-      </div>
-    </div>
-    <div class="card bg-danger">
-      <div class="card-body text-center">
-        <p class="card-text">Sie bewahren die Schöpfung nachhaltig.
-</p>
-      </div>
+  <div class="container achterspaltenlayout" style="padding-top:0px; position: relative;">
+    {% set entry = craft.entries.section('spendenfelderUndSo').slug('blog-ueberschrift').one() %}
+
+    <div style="padding-bottom:3rem; ">
+      <h1 style="padding-bottom: 2rem;"> {{ entry.text }}  </h1>
+      <div id="anleser"> {{ entry.textfeld }}  </div>
     </div>
   </div>
 </div>
 
+
+
+<div class="container-fluid no-padding" style="background-color: white; padding-bottom: 2rem;">
+
+  <div class="container zwoelferspaltenlayout" style="background-color: padding-bottom: 3rem;">
+    <div class="row">
+      {% set entries = craft.entries.section('blog').level('1').all() %}
+      <div class="col-sm-8">
+        {% for entry in entries %}
+        <img class="img-fluid"src=" {{ entry.bild.one().url }}" alt="blogbild" style="padding-bottom: 1rem;">
+        <div id="info"> Veröffentlicht am {{ entry.postDate | date("M d, Y") }}  </div>
+        <h2 style="padding-bottom: 0;"> {{ entry.title}}</h2>
+        <div id="copy" style="padding-top: 1rem; padding-bottom: 2.5rem;"> {{ entry.anleser }}
+        <a href="{{ 'https://aufbau-website.de/craft/web/blog/' ~ entry.slug }}"> Weiterlesen</a> </div>
+        {% endfor %}
+      </div>
+
+      <div class="col-sm-4">
+        <div id="copy" style="background-color: #f8f5f2; padding: 1.5rem;">
+          <p> <strong> Letzte Beiträge </strong> </p>
+          {% for entry in entries %}
+          <a href="{{ 'https://aufbau-website.de/craft/web/blog/' ~ entry.slug }}"> {{ entry.title }}</a>
+          <hr style="margin-top: .25rem; margin-bottom: .25rem;">
+          {% endfor %}
+        </div>
+      </div>
+    </div>
+
+  </div>
+</div>
+
+
+
 {% endblock %}
+{# Alles, was bis zu dem endblock-Tag kommt, überschreibt den Block in layoutHome #}
