--- a/templates/craft_sicherungWebsite/templates/blog/_entry/blogeintrag.html
+++ b/templates/craft_sicherungWebsite/templates/blog/_entry/blogeintrag.html
@@ -15,7 +15,7 @@
 
   <div class="container achterspaltenlayout" style="padding-bottom: 0; position: relative;">
   <h1> {{ entry.title }} </h1>
-  <div id="info" style="padding-bottom: 8rem;"> Veröffentlicht am {{ entry.postDate | date("M d, Y") }}  </div>
+  <div id="info" style="padding-bottom: 8rem;"> Veröffentlicht am {{ entry.postDate | date("M d, Y") }} - in <a href="{{ entry.blogKategorie.one().url }}">{{ entry.blogKategorie.one().title }}</a></div>
   </div>
 </div>
 
@@ -66,39 +66,6 @@
 </div>
 </div>  <hr>
 
-{# @var commentsWork \twentyfourhoursmedia\commentswork\services\CommentsWorkService #}
-{% set commentsWork = craft.commentsWork.service %}
-
-    <div class="card bg-light">
-        <div class="card-header">
-            Leave a comment
-        </div>
-        <div class="card-body">
-            <form method="post" action="{{ url('/actions/comments-work/default/post-comment') }}">
-                {{ csrfInput() }}
-                {{ signCommentForm(entry) }}
-                <input name="redirect" value="{{ craft.app.request.url }}#comments" type="hidden"/>
-                <input name="elementId" value="{{ entry.id }}" type="hidden"/>
-                <input name="siteId" value="{{ entry.siteId }}" type="hidden"/>
-                <input name="commentFormat" value="text" type="hidden"/>
-
-                <div class="form-group">
-                    <label for="comment-title">Title</label>
-                    <input name="title" id="comment-title" type="text" class="form-control"/>
-                </div>
-                <div class="form-group">
-                    <label for="comment-content">Comment</label>
-                    <textarea name="comment" rows="5" id="comment-content" class="form-control"></textarea>
-                </div>
-
-                <div>
-                    <input type="submit" class="btn btn-primary" value="Post comment"/>
-                </div>
-            </form>
-        </div>
-    </div>
-
-    
 
 </div> <!-- Die weiterführenden Links -->
 
