--- a/templates/craft_sicherungWebsite/templates/_layouts/navbar-mobile.html
+++ b/templates/craft_sicherungWebsite/templates/_layouts/navbar-mobile.html
@@ -19,14 +19,14 @@
     var counter = 0;
 
     $("#A").click(function() { //Über uns anklicken -> die anderen ausblenden
-      if (counter % 2 != 0) {
+      if (counter % 2 != 0) {  //Normale Menüansicht, also erste Ebene
         $("#homeBox").show();
         $("#zweiteBox").show();
         $("#dritteBox").show();
         $("#vierteBox").show();
         $("#blogBox").show();         $("#kontaktBox").show();
-        $("#pfeil1").attr("src", " https://aufbau-website.de/craft/web/bilder/header-bilder/chance-ev-arrow-right.png") //zurück-pfeil einblenden, wenn in die nächste Ebene gegangen wird
-        $("#pfeil1").css("float", "right");     $("#pfeil1").css("pading-left", "10%");
+        $("#pfeil1").attr("src", " https://aufbau-website.de/craft/web/bilder/header-bilder/chance-ev-arrow-right.png"); //zurück-pfeil einblenden, wenn in die nächste Ebene gegangen wird
+        $(".arrow").css("float", "right");    $(".arrow").css("padding-top", "0");         $(".arrow").css("padding-bottom", "0");
         $("#linkUeberUns").show();
         $("#ueberUnsSchrift").hide();
 
@@ -37,7 +37,7 @@
         $("#vierteBox").hide();
         $("#blogBox").hide();         $("#kontaktBox").hide();
         $("#pfeil1").attr("src", " https://aufbau-website.de/craft/web/bilder/header-bilder/chance-ev-arrow-left.png") //zurück-pfeil einblenden, wenn in die nächste Ebene gegangen wird
-        $("#pfeil1").css("float", "left");    $("#pfeil1").css("padding-left", "0");
+        $(".arrow").css("float", "left");  $(".arrow").css("padding-top", ".5rem"); $(".arrow").css("padding-bottom", "2rem");
         $("#linkUeberUns").hide();
         $("#ueberUnsSchrift").show();
       }
@@ -52,7 +52,7 @@
         $("#vierteBox").show();
         $("#blogBox").show();         $("#kontaktBox").show();
         $("#pfeil2").attr("src", " https://aufbau-website.de/craft/web/bilder/header-bilder/chance-ev-arrow-right.png") //zurück-pfeil einblenden, wenn in die nächste Ebene gegangen wird
-        $("#pfeil2").css("float", "right");     $("#pfeil2").css("pading-left", "10%");
+        $(".arrow").css("float", "right");    $(".arrow").css("padding-top", "0");         $(".arrow").css("padding-bottom", "0");
         $("#linkProjekte").show();
         $("#projekteSchrift").hide();
       } else {
@@ -62,7 +62,7 @@
         $("#vierteBox").hide();
         $("#blogBox").hide();         $("#kontaktBox").hide();
         $("#pfeil2").attr("src", " https://aufbau-website.de/craft/web/bilder/header-bilder/chance-ev-arrow-left.png") //zurück-pfeil einblenden, wenn in die nächste Ebene gegangen wird
-        $("#pfeil2").css("float", "left");    $("#pfeil2").css("padding-left", "0");
+        $(".arrow").css("float", "left");  $(".arrow").css("padding-top", ".5rem"); $(".arrow").css("padding-bottom", "2rem");
         $("#linkProjekte").hide();
         $("#projekteSchrift").show();
       }
@@ -92,7 +92,7 @@
         $("#vierteBox").show();
         $("#blogBox").show();         $("#kontaktBox").show();
         $("#pfeil3").attr("src", " https://aufbau-website.de/craft/web/bilder/header-bilder/chance-ev-arrow-right.png") //zurück-pfeil einblenden, wenn in die nächste Ebene gegangen wird
-        $("#pfeil3").css("float", "right");     $("#pfeil3").css("pading-left", "10%");
+        $(".arrow").css("float", "right");    $(".arrow").css("padding-top", "0");         $(".arrow").css("padding-bottom", "0");
         $("#linkSpenden").show();
         $("#spendenSchrift").hide();
 
@@ -103,7 +103,7 @@
         $("#vierteBox").hide();
         $("#blogBox").hide();         $("#kontaktBox").hide();
         $("#pfeil3").attr("src", " https://aufbau-website.de/craft/web/bilder/header-bilder/chance-ev-arrow-left.png") //zurück-pfeil einblenden, wenn in die nächste Ebene gegangen wird
-        $("#pfeil3").css("float", "left");    $("#pfeil3").css("padding-left", "0");
+        $(".arrow").css("float", "left");  $(".arrow").css("padding-top", ".5rem"); $(".arrow").css("padding-bottom", "2rem");
         $("#linkSpenden").hide();
         $("#spendenSchrift").show();
       }
@@ -158,7 +158,7 @@
         $("#dritteBox").show();
         $("#blogBox").show();         $("#kontaktBox").show();
         $("#pfeil4").attr("src", " https://aufbau-website.de/craft/web/bilder/header-bilder/chance-ev-arrow-right.png") //zurück-pfeil einblenden, wenn in die nächste Ebene gegangen wird
-        $("#pfeil4").css("float", "right");     $("#pfeil4").css("pading-left", "10%");
+        $(".arrow").css("float", "right");    $(".arrow").css("padding-top", "0");         $(".arrow").css("padding-bottom", "0");
         $("#linkFuerSie").show();
         $("#fuerSieSchrift").hide();
 
@@ -169,7 +169,7 @@
         $("#dritteBox").hide();
         $("#blogBox").hide();         $("#kontaktBox").hide();
         $("#pfeil4").attr("src", " https://aufbau-website.de/craft/web/bilder/header-bilder/chance-ev-arrow-left.png") //zurück-pfeil einblenden, wenn in die nächste Ebene gegangen wird
-        $("#pfeil4").css("float", "left");    $("#pfeil4").css("padding-left", "0");
+        $(".arrow").css("float", "left");  $(".arrow").css("padding-top", ".5rem"); $(".arrow").css("padding-bottom", "2rem");
         $("#linkFuerSie").hide();
         $("#fuerSieSchrift").show();
       }
@@ -225,6 +225,17 @@
   float: left;
   z-index: 0;
 }
+
+.navbarMobilgeraet .pfeilUnterebene {
+  width: 20px;
+  height: 20px;
+  vertical-align: middle;
+  float: left;
+  padding-top: 1rem;
+  padding-left: 3rem;
+  padding-bottom: 1rem;
+}
+
 .navbarMobilgeraet .item input + .arrow {
   transform: rotate(-90deg);
   transition: 0.1s;
@@ -257,7 +268,6 @@
 .navbarMobilgeraet label {
   line-height: 30px;
   margin: 0;
-  padding: 0 2em;
   list-style: none;
   text-decoration: none;
   color: #90A4AE;
@@ -278,6 +288,22 @@
   font-weight: 100;
 }
 
+
+.navbarMobilgeraet .arrow{ /* Die Pfeil in der ersten Ebene richtig setzen */
+  float: left;
+  padding-right: 10%;
+  position: relative;
+  top: 50%;
+  transform: translateY(25%);
+}
+
+.navbarMobilgeraet .pfeilErsteUnterebene {
+  width: 20px;
+  height: 20px;
+  float: right;
+  padding-right: 10%;
+}
+
 </style>
 
 <div class="navbarMobilgeraet">
@@ -290,7 +316,7 @@
   </a>
 
   <input type="checkbox" id="menu"/> <!-- Hamburger Menu, das nach unten klappt -->
-  <label for="menu" id="nav-icon" style="width: auto; display: inline; float: right;"> <img id="hamburgerMobile" style="max-width: 32px; max-height: 32px; padding-top: 1rem;" src=" {{ entry.bild3.one().url }} "> </label>
+  <label for="menu" id="nav-icon" style="width: auto; display: inline; float: right; padding-right: 2em;"> <img id="hamburgerMobile" style="max-width: 32px; max-height: 32px; padding-top: 1rem;" src=" {{ entry.bild3.one().url }} "> </label>
 
 
   <div class="multi-level">
@@ -303,7 +329,8 @@
     <div class="item" id="ersteBox" style="padding-left: 2em;">
       <a href="https://aufbau-website.de/craft/web/ueberUns" style="display: inline; padding-right: 20%;" id="linkUeberUns" >Über Uns</a>
       <input type="checkbox" id="A"/>
-      <label for="A" style="display: inline;">   <img src=" {{ entry.bild.one().url }} " id="pfeil1" class="arrow" style="float: right; padding-left: 10%;">  </label>
+      <label for="A" style="display: inline;">   <img src=" {{ entry.bild.one().url }} " id="pfeil1" class="arrow" style="float: right;">  </label>
+      <br clear="all" /> <!-- Einen rabiaten Zeileumbruch am Ende -->
       <ul>
         <li id="ueberUnsSchrift"> Über Uns</li>
         <li > <a href="https://aufbau-Website.de/craft/web/ueberUns/arbeitsweise.html"> Arbeitsweise</a> </li> <hr>
@@ -322,21 +349,20 @@
     </div>
 
     <div class="item" id="zweiteBox" style="padding-left: 2em;">
-
       <a href="https://aufbau-Website.de/craft/web/projekte" id="linkProjekte" style="display: inline; padding-right: 20%;">Projekte</a>
       <input type="checkbox" id="B"/>
       <label for="B" style="display: inline;">   <img src=" {{ entry.bild.one().url }} " class="arrow" id="pfeil2" style="float: right; padding-left: 10%;">  </label>
 
+      <br clear="all" /> <!-- Einen rabiaten Zeileumbruch am Ende -->
       <ul> <!-- Dropdown beginnt -->
         <li id="projekteSchrift"> Projekte</li>
-
         <li> <a href="https://aufbau-Website.de/craft/web/projekte/wowirarbeiten.html"> Wo wir arbeiten</a> </li>
 
         <li>
           <div class="sub-item" id="subItemProjekte"> <!-- Zweite Dropdown-Ebene beginnt, also Programme -> Dorfentwicklung und so -->
             <a href="https://aufbau-Website.de/craft/web/projekte/programme.html" style="display: inline; padding-right: 20%;">Programme</a>
             <input type="checkbox" id="B-A"/>
-            <label for="B-A" style="display: inline;">   <img src=" {{ entry.bild.one().url }} " class="arrow" id="pfeil11" style="float: right; padding-right: 10%; margin: 0; margin-top: 17px;">  </label>
+            <label for="B-A" style="display: inline;">   <img src=" {{ entry.bild.one().url }} " class="pfeilErsteUnterebene" </label>
           </div>
         </li>
         <li> <a href="https://aufbau-Website.de/craft/web/projekte/themen.html"> Themen</a> </li>
@@ -348,8 +374,8 @@
 
     <div id="projekteProgramme" style="display: none;">
       <input type="checkbox" id="B-A1"/>
-      <label for="B-A1" style="display: inline;">   <img style="padding-left: 2em;" src=" {{ entry.bild2.one().url }} " style="padding-left: 2em;" id="pfeil12" class="arrow">  </label>
-
+      <label for="B-A1" style="display: inline;">   <img src=" {{ entry.bild2.one().url }} " id="pfeil12" class="pfeilUnterebene">  </label>
+      <br clear="all" /> <!-- Einen rabiaten Zeileumbruch am Ende -->
       <ul>
         <li id="projekteProgramme"> Programme</li>
         <li> <a href="https://aufbau-Website.de/craft/web/projekte/programme/dorfentwicklung.html">Dorfentwicklung</a></li>
@@ -362,6 +388,7 @@
       <a href="https://aufbau-Website.de/craft/web/spenden" id="linkSpenden" style="display: inline; padding-right: 20%;">Spenden</a>
       <input type="checkbox" id="C"/>
       <label for="C" style="display: inline;">   <img src=" {{ entry.bild.one().url }} " class="arrow" id="pfeil3" style="float: right; padding-left: 10%;">  </label>
+      <br clear="all" /> <!-- Einen rabiaten Zeileumbruch am Ende -->
 
       <ul> <!-- Dropdown beginnt -->
         <li id="spendenSchrift"> Spenden</li>
@@ -369,14 +396,14 @@
           <div class="sub-item"> <!-- Zweite Dropdown-Ebene beginnt, also Spenden-Allgemein -> Einmalig oder Regelmäßig -->
             <a href="https://aufbau-Website.de/craft/web/spenden/einmalig.html" style="display: inline; padding-right: 20%;">Allgemein Spenden</a>
             <input type="checkbox" id="C-A"/>
-            <label for="C-A" style="display: inline;">   <img src=" {{ entry.bild.one().url }} " class="arrow" style="float: right; padding-right: 10%; margin: 0; margin-top: 17px;">  </label>
+            <label for="C-A" style="display: inline;">   <img src=" {{ entry.bild.one().url }} " class="pfeilErsteUnterebene" </label>
           </div>
         </li>
         <li> <!-- Das List-Element zeigt an, dass auch das Dropdown-Menu auch nur ein List-Element in dem Obermenu ist -->
           <div class="sub-item"> <!-- Zweite Dropdown-Ebene beginnt, also Spenden spezifisch -> Einmalig oder Regelmäßig -->
             <a href="https://aufbau-website.de/craft/web/spenden/projektbezogen/partnerlandeinmal" style="display: inline; padding-right: 20%;">Projektbezogen Spenden</a>
             <input type="checkbox" id="C-B"/>
-            <label for="C-B" style="display: inline;">   <img src=" {{ entry.bild.one().url }} " class="arrow" style="float: right; padding-right: 10%; margin: 0; margin-top: 17px;">  </label>
+            <label for="C-B" style="display: inline;">   <img src=" {{ entry.bild.one().url }} " class="pfeilErsteUnterebene" </label>
           </div>
           </li>
         </ul>
@@ -385,7 +412,8 @@
 
     <div id="spendenAllgemin" style="display: none;">
       <input type="checkbox" id="C-A1"/>
-      <label for="C-A1" style="display: inline;">   <img style="padding-left: 2em;" src=" {{ entry.bild2.one().url }} " id="pfeil12" class="arrow">  </label>
+      <label for="C-A1" style="display: inline;">   <img src=" {{ entry.bild2.one().url }} " id="pfeil12" class="pfeilUnterebene">  </label>
+      <br clear="all" /> <!-- Einen rabiaten Zeileumbruch am Ende -->
       <ul>
         <li> Allgemein Spenden</li>
         <li> <a href="https://aufbau-Website.de/craft/web/spenden/allgemein/einmaligallgemein.html">Einmalig</a></li>
@@ -395,18 +423,19 @@
 
     <div id="spendenProjektbezogen" style="display: none;"> <!-- Die Box mit den verschiedenen Spendenangeboten (Projektbezogen -> Regelmäßig/Einmalig/ schenken und spenden...)-->
       <input type="checkbox" id="C-B1"/>
-      <label for="C-B1" style="display: inline;">   <img style="padding-left: 2em;" src=" {{ entry.bild2.one().url }} " id="pfeil12" class="arrow">  </label>
+      <label for="C-B1" style="display: inline;">   <img src=" {{ entry.bild2.one().url }} " class="pfeilUnterebene">  </label>
+      <br clear="all" /> <!-- Einen rabiaten Zeileumbruch am Ende -->
       <ul>
         <li> Projektbezogen Spenden</li>
 
         <li> <a href="https://aufbau-website.de/craft/web/spenden/projektbezogen/partnerlandeinmal" style="display: inline; padding-right: 20%;">Einmalig</a>
           <input type="checkbox" id="C-C"/>
-          <label for="C-C" style="display: inline;">   <img src=" {{ entry.bild.one().url }} " class="arrow" style="float: right; padding-right: 10%; margin: 0; margin-top: 17px;">  </label>
+          <label for="C-C" style="display: inline;">   <img src=" {{ entry.bild.one().url }} " class="pfeilErsteUnterebene">  </label>
         </li>
 
         <li> <a href="https://aufbau-Website.de/craft/web/spenden/allgemein/regelmaesigallgemein.html" style="display: inline; padding-right: 20%;">Regelmäßig</a>
           <input type="checkbox" id="C-D"/>
-          <label for="C-D" style="display: inline;">   <img src=" {{ entry.bild.one().url }} " class="arrow" style="float: right; padding-right: 10%; margin: 0; margin-top: 17px;">  </label>
+          <label for="C-D" style="display: inline;">   <img src=" {{ entry.bild.one().url }} " class="pfeilErsteUnterebene">  </label>
         </li>
 
         <li><a href="https://aufbau-Website.de/craft/web/spenden/projektbezogen/schenkenundspenden">Schenken und Spenden</a></li>
@@ -418,7 +447,8 @@
 
     <div id="spendenProjektbezogenEinmalig" style="padding-left: 2em; display: none;">
       <input type="checkbox" id="C-C1"/>
-      <label for="C-C1" style="display: inline;">   <img style="padding-left: 2em;" src=" {{ entry.bild2.one().url }} " id="pfeil12" class="arrow">  </label>
+      <label for="C-C1" style="display: inline;">   <img src=" {{ entry.bild2.one().url }} " class="pfeilUnterebene">  </label>
+      <br clear="all" /> <!-- Einen rabiaten Zeileumbruch am Ende -->
       <ul>
         <li> Einmalig Projektbezogen Spenden </li>
         <li> <a href="https://aufbau-website.de/craft/web/spenden/projektbezogen/partnerlandregelmaesig">Länderpate</a></li>
@@ -431,7 +461,8 @@
 
     <div id="spendenProjektbezogenRegelmaesig" style="padding-left: 2em; display: none;">
       <input type="checkbox" id="C-D1"/>
-      <label for="C-D1" style="display: inline;">   <img style="padding-left: 2em;" src=" {{ entry.bild2.one().url }} " id="pfeil12" class="arrow">  </label>
+      <label for="C-D1" style="display: inline;">   <img src=" {{ entry.bild2.one().url }} " class="pfeilUnterebene">  </label>
+      <br clear="all" /> <!-- Einen rabiaten Zeileumbruch am Ende -->
       <ul>
         <li> Regelmäßig Projektbezogen Spenden </li>
         <li> <a href="https://aufbau-website.de/craft/web/spenden/projektbezogen/partnerlandregelmaesig">Länderpate</a></li>
@@ -442,10 +473,10 @@
     </div>
 
     <div class="item" id="vierteBox" style="padding-left: 2em;">
-
       <a href="https://aufbau-website.de/craft/web/fuerSie" id="linkFuerSie" style="display: inline; padding-right: 20%;">Für Sie</a>
       <input type="checkbox" id="D"/>
       <label for="D" style="display: inline;">   <img src=" {{ entry.bild.one().url }} " class="arrow" id="pfeil4" style="float: right; padding-left: 10%;">  </label>
+      <br clear="all" /> <!-- Einen rabiaten Zeileumbruch am Ende -->
 
       <ul> <!-- Dropdown beginnt -->
         <li id="fuerSieSchrift"> Für Sie</li>
@@ -454,7 +485,7 @@
           <div class="sub-item" id="subItemFreiwilligendienst"> <!-- Zweite Dropdown-Ebene beginnt, also Programme -> Dorfentwicklung und so -->
             <a href="https://aufbau-website.de/craft/web/fuerSie/freiwilligendienst.html" style="display: inline; padding-right: 20%;">Freiwilligendienst</a>
             <input type="checkbox" id="D-A"/>
-            <label for="D-A" style="display: inline;">   <img src=" {{ entry.bild.one().url }} " class="arrow" id="pfeil11" style="float: right; padding-right: 10%; margin: 0; margin-top: 17px;">  </label>
+            <label for="D-A" style="display: inline;">   <img src=" {{ entry.bild.one().url }} " class="pfeilErsteUnterebene">  </label>
           </div>
         </li>
         <li> <a href="https://aufbau-Website.de/craft/web/fuerSie/projektbesuch.html">Projektbesuch</a> </li>
@@ -462,7 +493,7 @@
           <div class="sub-item" id="subItemDaheim"> <!-- Zweite Dropdown-Ebene beginnt, also Programme -> Dorfentwicklung und so -->
             <a href="https://aufbau-website.de/craft/web/fuerSie/daheim.html" style="display: inline; padding-right: 20%;">Für Sie daheim</a>
             <input type="checkbox" id="D-B"/>
-            <label for="D-B" style="display: inline;">   <img src=" {{ entry.bild.one().url }} " class="arrow" id="pfeil11" style="float: right; padding-right: 10%; margin: 0; margin-top: 17px;">  </label>
+            <label for="D-B" style="display: inline;">   <img src=" {{ entry.bild.one().url }} " class="pfeilErsteUnterebene">  </label>
           </div>
         </li>
         <li> <a href="#">Presse und Downloads</a> </li>
@@ -475,7 +506,8 @@
 
     <div id="fuerSieFreiwilligendienst" style="display: none;">
       <input type="checkbox" id="D-A1"/>
-      <label for="D-A1" style="display: inline;">   <img style="padding-left: 2em;" src=" {{ entry.bild2.one().url }} " class="arrow">  </label>
+      <label for="D-A1" style="display: inline;">   <img src=" {{ entry.bild2.one().url }} " class="pfeilUnterebene">  </label>
+      <br clear="all" /> <!-- Einen rabiaten Zeileumbruch am Ende -->
       <ul>
         <li> Freiwilligendienst </li>
         <li><a tabindex="-1" href="https://aufbau-Website.de/craft/web/fuerSie/freiwillig/weltwaerts.html">Mit "weltwärts" nach Peru oder Kenia</a></li>
@@ -487,7 +519,8 @@
 
     <div id="fuerSieDaheim" style="display: none;">
       <input type="checkbox" id="D-B1"/>
-      <label for="D-B1" style="display: inline;">   <img style="padding-left: 2em;" src=" {{ entry.bild2.one().url }} " class="arrow">  </label>
+      <label for="D-B1" style="display: inline;">   <img src=" {{ entry.bild2.one().url }} " class="pfeilUnterebene">  </label>
+      <br clear="all" /> <!-- Einen rabiaten Zeileumbruch am Ende -->
       <ul>
         <li> Für Sie daheim </li>
         <li><a tabindex="-1" href="https://aufbau-Website.de/craft/web/fuerSie/daheim/consumermission.html">"Consumer Missions"</a></li>
