--- a/templates/craft_sicherungWebsite/templates/projekte/programme/naturschutz.html
+++ b/templates/craft_sicherungWebsite/templates/projekte/programme/naturschutz.html
@@ -54,7 +54,7 @@
     <div class="card" style=" border-color: white; border-top-color: #ed6e2c; border-width: 2px; margin-bottom: 20px;">
       <div class="card-header bg-white">
         <a class="collapsed card-link" data-toggle="collapse" href="#{{counter}}">
-          <h4> {{ entry.title }}   </h4>       </a>
+          <h4> {{ entry.title }}  <img src="" style="height: 1rem; float: right; margin-top: .25rem;"> </h4>       </a>
         </div>
         <div id="{{counter}}" class="collapse" data-parent="#accordion">
           <div class="card-body" id="copy">
@@ -68,8 +68,20 @@
       {% endif %}
 
     </div>
-
   </div>
+
+  <script>
+  $(document).ready(function(){
+    $(".card-header").children("a").children("h4").children("img").attr("src", " https://aufbau-website.de/craft/web/bilder/header-bilder/chance-ev-arrow-down.png "); //Aotmatisches Einfügen der Pfeil-links
+    $( ".card-header" ).click(function() { //Der Pfeil ändert sich beim draufklicken
+      if ($(this).children("a").hasClass("collapsed")) {
+        $(this).children("a").children("h4").children("img").attr("src", " https://aufbau-website.de/craft/web/bilder/header-bilder/chance-ev-arrow-up.png ");
+      } else {
+        $(this).children("a").children("h4").children("img").attr("src", " https://aufbau-website.de/craft/web/bilder/header-bilder/chance-ev-arrow-down.png ");
+      }
+});
+});
+  </script>
 
   <div class="container-fluid no-padding" style="background-color: #ffffff">
     <div class="container achterspaltenlayout text-center">
@@ -166,12 +178,11 @@
 
       {% set entry = craft.entries.section('projekte').slug('2-11').one() %}
         <a class="carousel-control-prev" href="#carouselContent" role="button" data-slide="prev">
-          <img class="carousel-control-prev-icon" aria-hidden="true" src="{{ entry.bild.one().url }}" style="margin-left: -120%;"></img>
+          <img aria-hidden="true" src="{% if entry.bild.one() is not null %}{{ entry.bild.one().url }} {% else %} class="carousel-control-prev-icon" {% endif %}" style="margin-left: -120%; height: 2rem;"></img>
           <span class="sr-only">Previous</span>
         </a>
         <a class="carousel-control-next" href="#carouselContent" role="button" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true" style="color: red;">
-          </span>
+          <img aria-hidden="true" src="{% if entry.bild.inReverse().one() is not null %}{{ entry.bild.inReverse().one().url }} {% else %} class="carousel-control-next-icon" {% endif %}" style="margin-left: 120%; height: 2rem;"></img>
           <span class="sr-only">Next</span>
         </a>
     </div>
