--- a/templates/craft_sicherungWebsite/templates/projekte/programme/dorfentwicklung.html
+++ b/templates/craft_sicherungWebsite/templates/projekte/programme/dorfentwicklung.html
@@ -45,6 +45,8 @@
     <h2> {{ entry.title }} </h2>
     <div id="anleser"> {{ entry.anleser }} </div>
 
+    {% set akkordionBilder = craft.entries.section('spendenfelderUndSo').slug('akkordion-bilder').one() %}
+
     {% set entries = craft.entries.section('projekte').slug('der-fünf-stufen-plan').one().children().all() %}
 
     <div id="accordion">
@@ -52,27 +54,29 @@
       {# If there are any entries, loop through them #}
       {% if entries | length %}        {% set counter = 0 %}
 
-      {# For each entry we find, do this #}
       {% for entry in entries %} {% set counter = counter + 1 %}
-
-
       <div class="card" style=" border-color: white; border-top-color: #ed6e2c; border-width: 2px; margin-bottom: 20px;">
         <div class="card-header bg-white">
-          <a class="collapsed card-link" data-toggle="collapse" href="#{{counter}}">
-          <h4> {{ entry.title }}   </h4>       </a>
-        </div>
-        <div id="{{counter}}" class="collapse" data-parent="#accordion">
-          <div class="card-body" id="copy">
-            {{ entry.text }}
+        <a class="collapsed card-link" data-toggle="collapse" href="#{{counter}}">
+          <div class="row">
+            <div class="col-11">
+              <h4> {{ entry.title }} </h4>
+            </div>
+            <div class="col-1">
+              <img src="{{ akkordionBilder.bild.one().url }}" style="height: 1rem; float: right; margin-top: .25rem;">
+            </div>
+          </div>
+        </a>
+          </div>
+          <div id="{{counter}}" class="collapse" data-parent="#accordion">
+            <div class="card-body" id="copy">
+              {{ entry.text }}
+            </div>
           </div>
         </div>
+        {% endfor %}
+        {% endif %}
       </div>
-
-      {% endfor %}
-
-      {% endif %}
-
-    </div>
 
   </div> <!-- Accordion - Div -->
 
