--- a/templates/craft_sicherungWebsite/templates/projekte/programme/naturschutz.html
+++ b/templates/craft_sicherungWebsite/templates/projekte/programme/naturschutz.html
@@ -39,6 +39,7 @@
   {% set entry = craft.entries.section('projekte').slug('bestandteile-naturschutzprogramms').one() %}
   <h2> {{ entry.title }} </h2>
   <div id="anleser"> {{ entry.anleser }} </div>
+  {% set akkordionBilder = craft.entries.section('spendenfelderUndSo').slug('akkordion-bilder').one() %}
 
   {% set entries = craft.entries.section('projekte').slug('bestandteile-naturschutzprogramms').one().children().all() %}
 
@@ -47,14 +48,19 @@
     {# If there are any entries, loop through them #}
     {% if entries | length %}        {% set counter = 0 %}
 
-    {# For each entry we find, do this #}
     {% for entry in entries %} {% set counter = counter + 1 %}
-
-
     <div class="card" style=" border-color: white; border-top-color: #ed6e2c; border-width: 2px; margin-bottom: 20px;">
       <div class="card-header bg-white">
-        <a class="collapsed card-link" data-toggle="collapse" href="#{{counter}}">
-          <h4> {{ entry.title }}  <img src="" style="height: 1rem; float: right; margin-top: .25rem;"> </h4>       </a>
+      <a class="collapsed card-link" data-toggle="collapse" href="#{{counter}}">
+        <div class="row">
+          <div class="col-11">
+            <h4> {{ entry.title }} </h4>
+          </div>
+          <div class="col-1">
+            <img src="{{ akkordionBilder.bild.one().url }}" style="height: 1rem; float: right; margin-top: .25rem;">
+          </div>
+        </div>
+      </a>
         </div>
         <div id="{{counter}}" class="collapse" data-parent="#accordion">
           <div class="card-body" id="copy">
@@ -62,26 +68,11 @@
           </div>
         </div>
       </div>
-
       {% endfor %}
-
       {% endif %}
 
     </div>
   </div>
-
-  <script>
-  $(document).ready(function(){
-    $(".card-header").children("a").children("h4").children("img").attr("src", " https://aufbau-website.de/craft/web/bilder/header-bilder/chance-ev-arrow-down.png "); //Aotmatisches Einfügen der Pfeil-links
-    $( ".card-header" ).click(function() { //Der Pfeil ändert sich beim draufklicken
-      if ($(this).children("a").hasClass("collapsed")) {
-        $(this).children("a").children("h4").children("img").attr("src", " https://aufbau-website.de/craft/web/bilder/header-bilder/chance-ev-arrow-up.png ");
-      } else {
-        $(this).children("a").children("h4").children("img").attr("src", " https://aufbau-website.de/craft/web/bilder/header-bilder/chance-ev-arrow-down.png ");
-      }
-});
-});
-  </script>
 
   <div class="container-fluid no-padding" style="background-color: #ffffff">
     <div class="container achterspaltenlayout text-center">
