--- a/templates/craft_sicherungWebsite/web/CSSundJS/stylevorgaben2.css
+++ b/templates/craft_sicherungWebsite/web/CSSundJS/stylevorgaben2.css
@@ -173,15 +173,7 @@
   padding-left: 3rem;
   padding-right: 3rem;
 }
-.stylevorgaben2 .card-link:after {
-  content: '\003C';
-  /* Unicode character for "plus" sign (+) */
-  font-size: 30px;
-  color: #0062ae;
-  float: right;
-  margin-top: -45px;
-  transform: rotate(-90deg);
-}
+
 .stylevorgaben2 .carousel-control-prev-icon {
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%6c757d' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E");
   margin-left: -100%;
@@ -223,4 +215,8 @@
 }
 .stylevorgaben2 {
   background-color: #f8f5f2;
+}
+
+body {
+  margin: 0;
 }
